test/tests/errors/error-file-rewrite-wrong-arg-count.sm
// true
// false
/**/
/**/

program{
    file f withbuffer bf;
    rewrite(f, bf);
}